@startuml
title Objets Connectés

'''classes
class Telecommande{
    + Telecommande():
    + ajouterAppareil(Appareil):
    + activerAppareil(int):
    + desactiverAppareil(int):
    + activerTout():
    + toString(): String
}

interface Appareil{
    + allumer():
    + eteindre():
}

class Lampe{
    - nom : String
    - allume : boolean

    + Lampe(String):
    + allumer():
    + eteindre():
    + toString(): String
}

class Hifi{
    - son : int

    + allumer():
    + eteindre():
}

'''relations
Appareil <|.. Lampe
Appareil <|.. Hifi
Telecommande "1" -> "0..*" Appareil : - appareils
@enduml